# dev-suite

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY-LICENSES.html  README.md  about.toml
.cargo/: config
.dev-suite/: repo-config.toml
.dev-suite/hooked/: commit-msg  post-receive  pre-commit  pre-commit.py
.dev-suite/ticket/closed/: 2-create-git-hooks-tool.toml  3-create-a-find_root-function.toml  4-create-a-tui-for-ticket.toml  create-a-find_root-function.toml  create-a-panic-handler-for-ticket-tui.toml  create-a-tui-for-ticket.toml  create-git-hooks-tool.toml  ds-install-wipes-user-path-on-windows.toml  having-no-tickets-causes-the-tui-to-crash.toml
.dev-suite/ticket/open/: 1-add-ability-to-edit-tickets.toml  2-create-git-hooks-tool.toml  3-create-a-find_root-function.toml  4-create-a-tui-for-ticket.toml  add-ability-to-edit-tickets.toml  build-out-cross-platform-testing.toml  create-a-panic-handler-for-ticket-tui.toml  create-tests-for-ticket-tui.toml  ds-install-wipes-user-path-on-windows.toml  having-no-tickets-causes-the-tui-to-crash.toml
.github/workflows/: main.yml
augment/: Cargo.toml
augment/src/: lib.rs
configamajig/: Cargo.toml
configamajig/src/: lib.rs
hooked/: Cargo.toml
hooked/src/: main.rs
hooked/tests/: init.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
ticket/: Cargo.toml
ticket/src/: actions.rs  main.rs  tui.rs
website/: config.toml
