[package]
name = "dev-suite"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
paw = "1.0"
shared = { path = "shared" }
structopt = { version = "0.3", features = ["paw"] }
dialoguer = "0.5"
which = "3.1"

[workspace]
members = [
  "shared",
  "ticket",
  "hooked",
]
