[package]
name = "dev-suite"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
configamajig = { path = "configamajig" }
dialoguer = "0.5"
paw = "1.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
shared = { path = "shared" }
structopt = { version = "0.3", features = ["paw"] }
which = "3.1"

[workspace]
members = [
  "configamajig",
  "shared",
  "ticket",
  "hooked",
]
