[package]
name = "dev-suite"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
configamajig = { path = "configamajig" }
dialoguer = "0.5"
dirs = "2.0"
paw = "1.0"
reqwest = { version = "0.10.0", features = ["blocking"] }
shared = { path = "shared" }
structopt = { version = "0.3", features = ["paw"] }
which = "3.1"

[workspace]
members = [
  "configamajig",
  "shared",
  "ticket",
  "hooked",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
