[package]
name = "hooked"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
default-run = "hooked"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
paw = "1.0"
shared = { path = "../shared" }
structopt = { version = "0.3", features = ["paw"] }
unicode-segmentation = "1.3"
log = "0.4"
pretty_env_logger = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "0.10"
git2 = "0.10"
