[package]
name = "ticket"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "1.9"
paw = "1.0"
rustyline = "5.0"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
structopt = { version = "0.3", features = ["paw"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v1"] }
log = "0.4"
pretty_env_logger = "0.3"
tui = "0.7"
termion = "1.5"
